syntax = "proto3";

option go_package = "maxischmaxi/jstreams-server/gen/version/v1;versionv1";

package version;

service VersionService {
  rpc GetVersions(GetVersionsRequest) returns (GetVersionsResponse) {}
}

message GetVersionsRequest {

}

message GetVersionsResponse {
  repeated string versions = 1;
}
